refactor: change HTML structure from table to div container for cards

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,21 +15,8 @@
         </div>
     </header>
     <main>
-        <table id="replays-table">
-            <thead>
-                <tr>
-                    <th>Beatmap</th>
-                    <th>Difficulty</th>
-                    <th>Score</th>
-                    <th>Judgements (300/100/50/Miss)</th>
-                    <th>Player</th>
-                    <th>Difficulty Stats (AR/OD/CS/HP)</th>
-                    <th>BPM</th>
-                </tr>
-            </thead>
-            <tbody id="replays-tbody">
-                </tbody>
-        </table>
+        <div id="replays-container">
+            </div>
     </main>
     <script src="script.js"></script>
 </body>
