--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>osu! Local Score Tracker</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="views/ScoresView.css">
+    <link rel="stylesheet" href="components/ReplayCard.css">
 </head>
 <body>
-    <header>
-        <h1>osu! Local Score Tracker</h1>
-        <div class="controls">
-            <button id="scan-button">Scan for New Replays</button>
-            <p id="status-message"></p>
-        </div>
-    </header>
-    <main>
-        <div id="replays-container">
+    <div class="app-container">
+        <nav class="sidebar">
+            <h1 class="sidebar-header">osu! Tracker</h1>
+            <div id="user-selector-container">
+                </div>
+            <ul class="nav-links">
+                <li><a href="#" class="nav-link active" data-view="scores">Scores</a></li>
+                <li><a href="#" class="nav-link" data-view="beatmaps">Beatmaps</a></li>
+                <li><a href="#" class="nav-link" data-view="profile">Profile</a></li>
+            </ul>
+             <div class="sidebar-footer">
+                <button id="scan-button">Scan Replays</button>
+                <p id="status-message"></p>
             </div>
-    </main>
-    <script src="script.js"></script>
+        </nav>
+        <main id="main-content">
+            </main>
+    </div>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
