chore: add cache-busting query to main.js script tag

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,6 @@
         <main id="main-content">
             </main>
     </div>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.js?v=1"></script>
 </body>
 </html>
