--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="views/ScoresView.css">
     <link rel="stylesheet" href="components/ReplayCard.css">
+    <link rel="stylesheet" href="components/BeatmapCard.css">
 </head>
 <body>
     <div class="app-container">
