feat(ui): add config link to nav and remove sidebar footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="views/ScoresView.css">
     <link rel="stylesheet" href="components/ReplayCard.css">
     <link rel="stylesheet" href="components/BeatmapCard.css">
+    <link rel="stylesheet" href="views/ConfigView.css">
 </head>
 <body>
     <div class="app-container">
@@ -19,10 +20,10 @@
                 <li><a href="#" class="nav-link active" data-view="scores">Scores</a></li>
                 <li><a href="#" class="nav-link" data-view="beatmaps">Beatmaps</a></li>
                 <li><a href="#" class="nav-link" data-view="profile">Profile</a></li>
+                <li><a href="#" class="nav-link" data-view="config">Config</a></li>
             </ul>
              <div class="sidebar-footer">
-                <button id="scan-button">Scan Replays</button>
-                <p id="status-message"></p>
+                <!-- Buttons and status moved to Config view -->
             </div>
         </nav>
         <main id="main-content">
