fix: restore global status message element in sidebar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#" class="nav-link" data-view="config">Config</a></li>
             </ul>
              <div class="sidebar-footer">
-                <!-- Buttons and status moved to Config view -->
+                <div id="status-message"></div>
             </div>
         </nav>
         <main id="main-content">
