build: import pagination css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="views/ScoresView.css">
     <link rel="stylesheet" href="components/ReplayCard.css">
     <link rel="stylesheet" href="components/BeatmapCard.css">
+    <link rel="stylesheet" href="components/Pagination.css">
     <link rel="stylesheet" href="views/ConfigView.css">
 </head>
 <body>
