--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,8 @@
         <main id="main-content">
             </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <script type="module" src="main.js?v=1"></script>
 </body>
 </html>
