--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="components/BeatmapCard.css">
     <link rel="stylesheet" href="components/Pagination.css">
     <link rel="stylesheet" href="views/ConfigView.css">
+    <link rel="stylesheet" href="views/RecommenderView.css">
 </head>
 <body>
     <div class="app-container">
@@ -21,6 +22,7 @@
                 <li><a href="#" class="nav-link active" data-view="scores">Scores</a></li>
                 <li><a href="#" class="nav-link" data-view="beatmaps">Beatmaps</a></li>
                 <li><a href="#" class="nav-link" data-view="profile">Profile</a></li>
+                <li><a href="#" class="nav-link" data-view="recommender">Recommender</a></li>
                 <li><a href="#" class="nav-link" data-view="config">Config</a></li>
             </ul>
              <div class="sidebar-footer">
